# adb-wrapper

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  test.py
adb/: adb.py  utils.py
adb_wrapper/: __init__.py  adb.py  firmware.py  google.json  utils.py
examples/: commands.py  degoogle.py  example.py  lenovo_tab_e10.py  root.py  transfer.py
tests/: .env  test_adb.py  test_base.py  test_device.py  test_packages.py  test_pytest.py  test_utils.py
