[project]
authors = [
  {name = "soIipsis"},
]
dependencies = ["wget"]
description = "A Python ADB wrapper for executing commands on multiple devices."
license = {text = "MIT License"}
name = "adb-wrapper"
readme = "README.md"
requires-python = ">=3.6"
version = "1.0.0"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]
