[metadata]
name = adb-wrapper
version = 1.0.0
author = soIipsist
description = A Python ADB wrapper for executing commands on multiple devices
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
License :: OSI Approved :: MIT License

[options]
packages = find:
exclude =
    tests
    tests.*
    examples
    examples.*
python_requires = >=3.6
include_package_data = True
